--- a/코딩테스트/코딩테스트용문법/문법2/그래프이론.md
+++ b/코딩테스트/코딩테스트용문법/문법2/그래프이론.md
@@ -1,7 +1,15 @@
 ## 정점과 간선
 
-#### 정점(vertex)  
+### 정점(vertex)  
 노드라고도 불리며 그래프를 형성하는 기본 단위이다.  
 정점은 분할할 수 없는 객체이자 점으로 표현되는 위치, 사람, 물건 등이 될 수 있다. 
 
-#### 간선
+### 간선
+사람과 사람과의 관계도 될 수 있다.  
+정점: A와 B   
+간선: A가 B를 좋아하는 감정    
+단방향 간성: A가 B를 좋아함   
+양방향 간선: A와 B 서로 좋아하는것   
+
+
+
