--- a/코딩테스트/코딩테스트용문법/문법2/그래프이론.md
+++ b/코딩테스트/코딩테스트용문법/문법2/그래프이론.md
@@ -11,5 +11,9 @@
 단방향 간성: A가 B를 좋아함   
 양방향 간선: A와 B 서로 좋아하는것   
 
+![image](https://github.com/indextrown/algorithm/assets/69367698/9ac24125-f48b-4f69-a836-2b3a9dc78d4f)
 
+### 그래프
+정점과 간선의 집합을 의미한다.  
+![image](https://github.com/indextrown/algorithm/assets/69367698/cd356c83-09c9-4494-a1b4-ac2c743e1e86)
 
