--- a/코딩테스트/코딩테스트용문법/문법2/그래프이론.md
+++ b/코딩테스트/코딩테스트용문법/문법2/그래프이론.md
@@ -17,3 +17,10 @@
 ### 그래프
 정점과 간선의 집합을 의미한다.  
 ![image](https://github.com/indextrown/algorithm/assets/69367698/cd356c83-09c9-4494-a1b4-ac2c743e1e86)
+
+
+
+### 가중치
+부산에서 울까지 갈 때 경로를 간선이라고 한다.
+이 간선에 드는 비용을 가중치 라고 한다. 
+비용: 시간, 비용 등
