--- a/코딩테스트/코딩테스트용문법/문법2/그래프이론.md
+++ b/코딩테스트/코딩테스트용문법/문법2/그래프이론.md
@@ -21,6 +21,10 @@
 
 
 ### 가중치
-부산에서 울까지 갈 때 경로를 간선이라고 한다.
-이 간선에 드는 비용을 가중치 라고 한다. 
-비용: 시간, 비용 등
+부산에서 울까지 갈 때 경로를 간선이라고 한다.  
+이 간선에 드는 비용을 가중치 라고 한다.   
+비용: 시간, 비용 등  
+
+가중치 예시
+![image](https://github.com/indextrown/algorithm/assets/69367698/df730d21-08ba-4b87-8558-ea633f174123)
+
