--- a/코딩테스트/코딩테스트용문법/문법2/그래프이론.md
+++ b/코딩테스트/코딩테스트용문법/문법2/그래프이론.md
@@ -24,7 +24,13 @@
 부산에서 울까지 갈 때 경로를 간선이라고 한다.  
 이 간선에 드는 비용을 가중치 라고 한다.   
 비용: 시간, 비용 등  
-
+ 
 가중치 예시
 ![image](https://github.com/indextrown/algorithm/assets/69367698/df730d21-08ba-4b87-8558-ea633f174123)
+
+### 트리
+자식노드와 부모노드로 이루어진 계층적인 구조를 가지며 무방향 그래프의 일종이자 사이클이 없는 자료구조를 의미한다.  
+그래프는 정점과 간선의 집을 의미하는데, 이러한 집합 중에 계층적인 구조를 가진 것이 트리이다.  
+![image](https://github.com/indextrown/algorithm/assets/69367698/5fffc5bf-9597-4492-b473-107776a3feca)
+
 
