--- a/코딩테스트/코딩테스트용문법/문법2/그래프이론.md
+++ b/코딩테스트/코딩테스트용문법/문법2/그래프이론.md
@@ -34,3 +34,6 @@
 ![image](https://github.com/indextrown/algorithm/assets/69367698/5fffc5bf-9597-4492-b473-107776a3feca)
 
 
+정점Vertex
+간선Edge
+V텨![image](https://github.com/indextrown/algorithm/assets/69367698/63ac0b0d-de8b-4fcd-b830-88236ebac4c0)
